fix: Fix property filter token padding alignment when page-wide list styling is present (#1023)

--- a/src/internal/components/token-list/styles.scss
+++ b/src/internal/components/token-list/styles.scss
@@ -42,7 +42,9 @@
 }
 
 .list-item {
-  /* used in test-utils */
+  // To override v2.1 list styling
+  padding: 0;
+  margin: 0;
 }
 
 .toggle-container-inline {
